[gd_scene load_steps=39 format=2]

[ext_resource path="res://Scripts/PleaseConnect.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Sprites/RoomTesting/2bg_border_ruins.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Sprites/RoomTesting/1bg_border_ruins.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Borders/bg_border_truelab.png" type="Texture" id=4]
[ext_resource path="res://Scripts/TitleBar.gd" type="Script" id=5]
[ext_resource path="res://Sprites/Logos/UTOL.png" type="Texture" id=6]
[ext_resource path="res://Scripts/HoverBarButton.tres" type="StyleBox" id=7]
[ext_resource path="res://Scripts/PressedBarButton.tres" type="StyleBox" id=8]
[ext_resource path="res://Audios/networkscreen/mus_core.ogg" type="AudioStream" id=9]
[ext_resource path="res://Audios/networkscreen/mus_shop.ogg" type="AudioStream" id=10]
[ext_resource path="res://Audios/networkscreen/mus_lab.ogg" type="AudioStream" id=11]
[ext_resource path="res://Audios/networkscreen/mus_hereweare.ogg" type="AudioStream" id=12]
[ext_resource path="res://SFX/saving.ogg" type="AudioStream" id=13]
[ext_resource path="res://Audios/networkscreen/mus_house1.ogg" type="AudioStream" id=14]
[ext_resource path="res://Audios/networkscreen/mus_options_fall.ogg" type="AudioStream" id=15]
[ext_resource path="res://Audios/networkscreen/mus_waterfall.ogg" type="AudioStream" id=16]
[ext_resource path="res://Audios/networkscreen/mus_anothermedium.ogg" type="AudioStream" id=17]

[sub_resource type="DynamicFontData" id=1]
resource_local_to_scene = true
font_path = "res://Fonts/ttf/determinationmonoweb-webfont.ttf"

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "Change_Text"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.6, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "Checking For Internet", "Checking For Internet.", "Checking For Internet..", "Checking For Internet..." ]
}

[sub_resource type="Animation" id=4]
resource_name = "FadeIn"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "FadeIn"
length = 2.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2, 2.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "FadeOut"
length = 2.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2, 2.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "FadeIn"
length = 2.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2, 2.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "FadeOut"
length = 2.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2, 2.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "FadeIn"
length = 4.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 4, 4.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "FadeOut"
length = 4.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 4, 4.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "FadeIn"
length = 4.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 4, 4.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "FadeOut"
length = 4.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 4, 4.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "1",
"speed": 0.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "2",
"speed": 0.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "3",
"speed": 0.0
} ]

[sub_resource type="Animation" id=14]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="DynamicFontData" id=16]
resource_local_to_scene = true
antialiased = false
font_path = "res://Fonts/ttf/determinationmonoweb-webfont.ttf"

[sub_resource type="DynamicFont" id=17]
resource_local_to_scene = true
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 16 )

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.180392, 0.180392, 0.360784, 0 )

[sub_resource type="DynamicFontData" id=20]
font_path = "res://Fonts/ttf/arial.ttf"

[sub_resource type="DynamicFont" id=21]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 20 )

[node name="PleaseConnect" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 960.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.5
margin_top = -68.0
margin_right = 480.5
margin_bottom = -12.0
custom_fonts/font = SubResource( 2 )
text = "No Network Connection Found"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.5
margin_top = -46.0
margin_right = 480.5
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Connected"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.5
margin_top = -24.0
margin_right = 480.5
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Checking For Internet"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Label2"]
autoplay = "Change_Text"
anims/Change_Text = SubResource( 3 )

[node name="Label3" type="Label" parent="Control"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -311.0
margin_top = -234.0
margin_right = 311.0
margin_bottom = -140.0
custom_fonts/font = SubResource( 2 )
text = "You've been here for a while, We'll play some music for you"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Label3"]
anims/FadeIn = SubResource( 4 )

[node name="Label4" type="Label" parent="Control"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -476.0
margin_top = 79.0
margin_right = 481.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 2 )
text = "Playing"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Label4"]
anims/FadeIn = SubResource( 5 )
anims/FadeOut = SubResource( 6 )

[node name="Label6" type="Label" parent="Control"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = 111.0
margin_right = 480.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Label6"]
anims/FadeIn = SubResource( 7 )
anims/FadeOut = SubResource( 8 )

[node name="Label7" type="Label" parent="Control"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = 185.0
margin_right = 480.0
margin_bottom = 225.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Toby Fox"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Label7"]
anims/FadeIn = SubResource( 9 )
anims/FadeOut = SubResource( 10 )

[node name="Label5" type="Label" parent="Control"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = 154.0
margin_right = 480.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 2 )
text = "Author"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Label5"]
anims/FadeIn = SubResource( 11 )
anims/FadeOut = SubResource( 12 )

[node name="Connected" type="AudioStreamPlayer2D" parent="Control"]
stream = ExtResource( 13 )

[node name="Core" type="AudioStreamPlayer2D" parent="Control"]
stream = ExtResource( 9 )

[node name="Snowdin_Shop" type="AudioStreamPlayer2D" parent="Control"]
stream = ExtResource( 10 )

[node name="Lab" type="AudioStreamPlayer2D" parent="Control"]
stream = ExtResource( 11 )

[node name="TrueLab" type="AudioStreamPlayer2D" parent="Control"]
stream = ExtResource( 12 )
attenuation = 0.554785

[node name="UwaSoTemprate" type="AudioStreamPlayer2D" parent="Control"]
stream = ExtResource( 15 )
attenuation = 0.554785

[node name="Home" type="AudioStreamPlayer2D" parent="Control"]
stream = ExtResource( 14 )
attenuation = 0.554785

[node name="Waterfall" type="AudioStreamPlayer2D" parent="Control"]
stream = ExtResource( 16 )
attenuation = 0.554785

[node name="AnotherMedium" type="AudioStreamPlayer2D" parent="Control"]
stream = ExtResource( 17 )
attenuation = 0.554785

[node name="Timer" type="Timer" parent="Control"]
wait_time = 0.07
autostart = true

[node name="Timer2" type="Timer" parent="Control"]
wait_time = 0.07
autostart = true

[node name="Timer_2" type="Timer" parent="Control"]
autostart = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 480, 270 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 13 )
animation = "3"

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = -33.0
margin_top = -31.0
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 1
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
autoplay = "FadeIn"
anims/FadeIn = SubResource( 14 )
anims/FadeOut = SubResource( 15 )

[node name="TitleBar" type="Control" parent="."]
margin_right = 868.0
margin_bottom = 25.0
mouse_filter = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UTOL" type="Sprite" parent="TitleBar"]
position = Vector2( 12, 13 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="TitleBar"]
margin_left = 24.0
margin_top = 5.0
margin_right = 295.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 17 )
text = "Undertale Online"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 913.983
margin_right = 959.983
margin_bottom = 25.0
mouse_filter = 1
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
custom_fonts/font = SubResource( 21 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinimizeButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 868.0
margin_right = 914.0
margin_bottom = 25.0
mouse_filter = 1
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
custom_fonts/font = SubResource( 21 )
text = "−"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="finished" from="Control/Connected" to="." method="_on_TrueLab_finished"]
[connection signal="finished" from="Control/Core" to="." method="_on_Music_finished"]
[connection signal="finished" from="Control/Snowdin_Shop" to="." method="_on_Music_finished"]
[connection signal="finished" from="Control/Lab" to="." method="_on_Music_finished"]
[connection signal="finished" from="Control/TrueLab" to="." method="_on_Music_finished"]
[connection signal="finished" from="Control/UwaSoTemprate" to="." method="_on_Music_finished"]
[connection signal="finished" from="Control/Home" to="." method="_on_Music_finished"]
[connection signal="finished" from="Control/Waterfall" to="." method="_on_Music_finished"]
[connection signal="finished" from="Control/AnotherMedium" to="." method="_on_Music_finished"]
[connection signal="timeout" from="Control/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Control/Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Control/Timer_2" to="." method="_on_Timer_2_timeout"]
[connection signal="animation_finished" from="ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="gui_input" from="TitleBar" to="TitleBar" method="_on_TitleBar_gui_input"]
[connection signal="pressed" from="ExitButton" to="TitleBar" method="_on_ExitButton_pressed"]
[connection signal="pressed" from="MinimizeButton" to="TitleBar" method="_on_MinimizeButton_pressed"]
